# SysProg_Lab4

./: .gitignore  CMakeLists.txt
data/: grammar_example.txt  valid_input_example.txt
src/: firstfollow.cpp  firstfollow.h  firstfollow.hpp  grammar.cpp  grammar.hpp  main.cpp  parsing.cpp  parsing.hpp  readers.cpp  readers.hpp
src/ast/: tree.cpp  tree.hpp  tree_visualization.cpp  tree_visualization.hpp
