cmake_minimum_required(VERSION 3.26)
project(SysProg_Lab4)

set(CMAKE_CXX_STANDARD 20)

add_executable(
        SysProg_Lab4
        src/main.cpp
        src/grammar.cpp
        src/grammar.hpp
        src/readers.cpp
        src/readers.hpp
        src/firstfollow.cpp
        src/firstfollow.hpp
        src/readers.hpp
        src/parsing.cpp
        src/parsing.hpp
)
        src/parsing.cpp
        src/parsing.hpp)
        src/grammar.hpp
